primera funcion de consulta a clientes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <img id="logoUsa" src="img\logo.jfif" alt="">
                 </div>
                 <div class="botones">
-                    <button>Operaciones sobre las Tablas</button>
+                    <a href="clientes.html"><button>Operaciones sobre las Tablas</button></a>
                 </div>
             </div>
         </div>
