--- a/clientes.html
+++ b/clientes.html
@@ -1,3 +1,9 @@
+<php>
+
+  header("Access-Control-Allow-Origin: http://129.151.112.149:8080");
+</php>
+
+
 <!doctype html>
 <html lang="en">
 
@@ -23,7 +29,7 @@
       <div class="card">
         <div class="col-lg-12">
           <div class="card-header">
-            <h1 background="red">DESPLIEGUE DE INFORMACION DE LAS INSTANCIAS ORACLE</h1>
+            <h1 background="red">RETO 3</h1>
           </div>
           <div class="card-body">
             <fieldset style="width: 50%;">
@@ -97,6 +103,11 @@
               </div>
 
               <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="password" disabled required>
+              </div>
+
+              <div class="form-group">
                 <label for="edad">Edad</label>
                 <input type="number" class="form-control" id="edad" placeholder="edad" disabled required>
               </div>
@@ -114,7 +125,7 @@
               let nombre = document.getElementById('nombre')
               let correo = document.getElementById('email')
               let anios = document.getElementById('edad')
-
+              let password = document.getElementById('password')
               let save = document.getElementById('guardar')
               let edit = document.getElementById('actualizar')
               function controlEventos() {
@@ -126,6 +137,7 @@
                   anios.disabled = false;
                   save.disabled = false;
                   edit.disabled = true;
+                  password.disabled=false;
 
                 } else {
 
@@ -135,6 +147,7 @@
                   anios.disabled = false;
                   save.disabled = true;
                   edit.disabled = false;
+                  password.disabled=false;
 
                 }
 
